k8s/test/request-authentication.yaml
# 外部请求自定义认证，通过jwtRule，一般配合 AuthorizationPolicy 使用
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: demo-ingress-ra
spec:
  selector:
    matchLabels:
      app: demo-gateway
  # jwt默认从 Authorization 头上查找
  jwtRules:
    - issuer: "1234567@developer.email.com" # 匹配token内的issuer字段，token的签发人
      audiences: [ "www.baidu.com", "map.baidu.com" ] # 受众，和token内的字段进行匹配，如果为空，则使用服务名称
      # jwt的验签公钥获取地址，不指定时，默认通过OIDC规范隐式获取（issuer的email部分获取或 https://openid.net/specs/openid-connect-discovery-1_0.html）
      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.15/security/tools/jwt/samples/jwks.json"
      jwks: "xxx" # jwt的验签公钥，和上面只能指定一个
      fromHeaders: # jwt的获取头部名称，可指定多个
        - name: x-jwt-assertion
          prefix: "Bearer " # token的前缀，需要带上空格
      fromParams: # jwt从url上获取的参数名称
        - "token"
      outputPayloadToHeader: "jwt_payload_header" # base64_encoded(jwt_payload_in_JSON)，指定后，自动在请求头上填充对应jwt载荷信息
      forwardOriginalToken: false # 将原生token发送到上游
    - issuer: "issuer-xxx"
